# vpngate-link

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  install.sh
.github/workflows/: deb.yml
examples/: hysteria2-outbounds.yaml  mita-upstream.json
packaging/: default.env
packaging/windows/: vpngate-link.env
scripts/: install-release.sh  install.sh  live-ubuntu-check.sh  package-deb.sh  package-windows.ps1
scripts/windows/: install-startup-task.ps1  run.ps1  uninstall-startup-task.ps1
src/: catalog.rs  config.rs  main.rs  model.rs  openvpn.rs  proxy.rs  server.rs  store.rs
systemd/: vpngate-link.service
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css
