[package]
name = "vpngate-link"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
csv = "1"
http = "1"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
